# 2030-Inference-Code

./: .gitignore  README.md
AdaViT-Inference/: README.md  utils.py
AdaViT-Inference/inference/: README.md  convert_to_onnx.py  infer_jax.py  infer_mindspore.py  infer_paddle.py  infer_torch.py
AdaViT-Inference/models/: ada_transformer_block.py
SliMM-Inference/: CONVERSION_README.md  README.md  convert_models.py  convert_onnx_to_frameworks.py  export_slimm.py  inference_jax.py  inference_mindspore.py  inference_onnx.py  inference_paddlepaddle.py  inference_torch.py  onnx_wrappers.py  pyproject.toml
SliMM-Inference/scripts/data/: lcs_558k_pt.yaml  llava_next.yaml  llava_ov_mid.yaml  llava_ov_si.yaml
SliMM-Inference/scripts/slimm/: job_template.sh  slimm-baseline-qwen2-0.5B.sh  slimm-deepsatckm-qwen2-0.5B.sh  slimm-deepstacke-qwen2vl-2b.sh
SliMM-Inference/slimm/: utils.py
SliMM-Inference/slimm/model/: configuration.py  processor.py  slimm.py  utils_vl.py
SliMM-Inference/slimm/model/language_model/: __init__.py  qwen2vl.py
SliMM-Inference/slimm/model/vision_encoder/: __init__.py  dfn_vit.py  merger.py  siglip.py
SliMM-Inference/slimm/train/: train.py  trainer.py
